update project domain url

--- a/doc/man/weycoin-qt.1
+++ b/doc/man/weycoin-qt.1
@@ -534,7 +534,7 @@ Reset all settings changed in the GUI
 Copyright (C) 2009-2017 The WeyCoin Core developers
 
 Please contribute if you find WeyCoin Core useful. Visit
-<https://weycoin.io> for further iormation about the software.
+<https://weycoinproject.org> for further iormation about the software.
 The source code is available from <https://github.com/weycoin/weycoin>.
 
 This is experimental software.
