--- a/doc/man/weycoind.1
+++ b/doc/man/weycoind.1
@@ -513,7 +513,7 @@ Set the number of threads to service RPC calls (default: 4)
 Copyright (C) 2009-2017 The WeyCoin Core developers
 
 Please contribute if you find WeyCoin Core useful. Visit
-<https://weycoin.io> for further iormation about the software.
+<https://weycoinproject.org> for further iormation about the software.
 The source code is available from <https://github.com/weycoin/weycoin>.
 
 This is experimental software.
